Fix a11y issues concerning tab shifting, duplicate name and ids, ect...

--- a/src/index.css
+++ b/src/index.css
@@ -15,4 +15,8 @@
   .super-ease-out {
     transition-timing-function: cubic-bezier(0.615, 0.015, 0.960, 0.645);
   }
+
+  .text-shadow {
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+  }
 }
